@@ -1,3 +1,9 @@
+2002-09-05  olicha  <olivier.chapuis@free.fr>
+
+	* FvwmTaskBar/Goodies.c (InitGoodies):
+	* FvwmTaskBar/FvwmTaskBar.c (StartMeUp): 
+	Fixed font loading
+
 2002-08-20  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmPager/x_pager.c (initialize_pager):
