@@ -1,3 +1,8 @@
+2002-09-05  olicha  <olivier.chapuis@free.fr>
+
+	* NEWS:
+	FvwmTaskBar news
+
 2002-09-03  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/menus.c (paint_menu):
